--- a/serviceProviderNodeJSPassport/views/index.ejs
+++ b/serviceProviderNodeJSPassport/views/index.ejs
@@ -28,6 +28,8 @@
             ou démarches municipales en ligne.</p>
 
         <p>L'espace usager vous offre la possibilité de suivre ces demandes 24h/24 et 7 jours/7</p>
+
+        <p>Sachez en tout cas que vous avez les droits suivant: <%= userInfo._claim_names.role %>  avec la valeur: <%= userInfo._claim_sources.src1 %></p>
     </div>
 
     <div class="span3 well well-gu">
