Fixed user infos when returning from FD

--- a/serviceProviderNodeJSPassport/views/demarche-form.ejs
+++ b/serviceProviderNodeJSPassport/views/demarche-form.ejs
@@ -17,7 +17,7 @@
                     <div class="controls">
                         <input id="textinput-0" name="textinput-0" type="text" placeholder=""
                                class="input-large span8" disabled
-                               value="<%= userInfo.name.familyName %>">
+                               value="<%= userInfo.family_name %>">
 
                     </div>
 
@@ -33,7 +33,7 @@
                     <div class="controls">
                         <input id="textinput-1" name="textinput-1" type="text" placeholder=""
                                class="input-large span8" disabled
-                               value="<%= userInfo.name.givenName %>">
+                               value="<%= userInfo.given_name %>">
 
                     </div>
                 </div>
