[FC-853] Renamed FSP1 in guichet des parisiens

--- a/serviceProviderNodeJSPassport/views/demarche-etape2.ejs
+++ b/serviceProviderNodeJSPassport/views/demarche-etape2.ejs
@@ -18,7 +18,7 @@
             </tr>
             <tr>
                 <td>Votre adresse</td>
-                <td><b>7 Rue de l'Arche Sèche, 44000 Nantes</b></td>
+                <td><b>34 avenue de l'Opéra, 75002 Paris</b></td>
             </tr>
             <tr>
                 <td>Votre enfant</td>
