--- a/serviceProviderNodeJSPassport/views/includes/header.ejs
+++ b/serviceProviderNodeJSPassport/views/includes/header.ejs
@@ -4,10 +4,10 @@
         <div class="row-fluid">
             <div class="span7 offset1">
                 <a href="#">
-                    <img class="logo png_bg" src="/images/logo_nantes.svg" title="Nantes" alt="Nantes">
+                    <img class="logo png_bg" src="/images/Mairie_De_Paris.svg" title="Paris" alt="Paris">
                 </a>
                 <h2 class="title">
-                    <a href="/">GUICHET DES NANTAIS</a>
+                    <a href="/">GUICHET DES PARISIENS</a>
                     <% if (user) { %><button id="btn-deconnect" onclick="window.location = '/logout?force'">Se déconnecter sans confirmation</button><%}%>
                 </h2>
             </div>
