--- a/serviceProviderNodeJSPassport/views/index.ejs
+++ b/serviceProviderNodeJSPassport/views/index.ejs
@@ -24,7 +24,7 @@
             </h4>
         </div>
         <% } %>
-        <p>Pour vous faciliter la vie au quotidien, la ville de Nantes vous propose de faire certaines de vos demandes
+        <p>Pour vous faciliter la vie au quotidien, la ville de Paris vous propose de faire certaines de vos demandes
             ou démarches municipales en ligne.</p>
 
         <p>L'espace usager vous offre la possibilité de suivre ces demandes 24h/24 et 7 jours/7</p>
@@ -47,9 +47,9 @@
     </div>
     <% } else { %>
     <div class="span6 well">
-        <h4>Avec le Guichet des Nantais vous pouvez :</h4>
+        <h4>Avec le Guichet des Parisiens vous pouvez :</h4>
         <ul class="list-main-content">
-            <li>Accéder aux différentes démarches administratives en ligne de la ville de Nantes</li>
+            <li>Accéder aux différentes démarches administratives en ligne de la ville de Paris</li>
             <li>Retouver l'historique de vos demandes dans votre espace personnel</li>
             <li>Etre informé de l'état d'avancement de l'instruction de vos demandes</li>
         </ul>
