--- a/serviceProviderNodeJSPassport/views/index.ejs
+++ b/serviceProviderNodeJSPassport/views/index.ejs
@@ -87,7 +87,7 @@
         <h4>Gagnez du temps dans la réalisation de vos démarches en vous connectant par FranceConnect!</h4>
         <p>Connectez vous à l'administration <b>en toute sécurité</b>, <b>sans créer de nouveau compte</b>.</p>
         <div class="span12 connect">
-            <a id="fc_login" rel="group" href="/login_org" modal="true" autoHeight="false" autoSize="false">
+            <a id="fc_login" rel="group" href="/login_org">
                 Connexion avec FranceConnect
             </a>
         </div>
@@ -99,13 +99,5 @@
         $('[data-toggle="tooltip"]').tooltip()
     })
 </script>
-<script type="text/javascript">
-    var screenTabletWith = 767;
-    $('#fc_login').click(function (event) {
-        if ($(window).width() > screenTabletWith) {
-            event.preventDefault();
-            OpenPopupCenter(this.href, "FranceConnect_Identification", 600, 600);
-        }
-    });
-</script>
+
 <% include includes/footer %>
