--- a/serviceProviderNodeJSPassport20-11/views/index.ejs
+++ b/serviceProviderNodeJSPassport20-11/views/index.ejs
@@ -79,8 +79,8 @@
             <li>Etre informé de l'état d'avancement de l'instruction de vos demandes</li>
         </ul>
         <div class="text-center">
-            <a class="btn btn-large btn-main" href="/inscription">CREER UN COMPTE</a>
-            <a class="btn btn-large btn-main" href="/login">ME CONNECTER</a>
+            <a class="btn btn-large btn-main" href="/#">CREER UN COMPTE</a>
+            <a class="btn btn-large btn-main" href="/#">ME CONNECTER</a>
         </div>
     </div>
     <div class="span6 well">
