--- a/serviceProviderNodeJSPassport/views/includes/header.ejs
+++ b/serviceProviderNodeJSPassport/views/includes/header.ejs
@@ -13,7 +13,7 @@
             </div>
             <div class="span3">
                 <% if (user) { %>
-                <div id="fconnect-profile" data-fc-logout-url="/logout">
+                <div id="fconnect-profile" data-fc-logout-url="/">
                     <a href="#"><%= user %></a><span class="caret"></span>
                 </div>
                 <% } %>
