--- a/serviceProviderNodeJSPassport/views/index.ejs
+++ b/serviceProviderNodeJSPassport/views/index.ejs
@@ -13,7 +13,7 @@
         <h4>Gagnez du temps dans la réalisation de vos démarches en vous connectant par FranceConnect!</h4>
         <p>Connectez vous à l'administration <b>en toute sécurité</b>, <b>sans créer de nouveau compte</b>.</p>
         <div class="span12 connect">
-            <a id="fc_login" rel="group" href="/login_org">
+            <a id="fc_login" rel="group" href="/login">
                 Connexion avec FranceConnect
             </a>
         </div>
