--- a/NodeJSES6/views/pages/profile.ejs
+++ b/NodeJSES6/views/pages/profile.ejs
@@ -7,7 +7,7 @@
             </ul>
             <br>
             <% if (!isUsingFDMock) { %>
-            <p><b>Afin d'activer la fonctionalité ci-dessus, il faut: </b></p>
+            <p><b>Activer la fonctionalité ci-dessus, il faut: </b></p>
             <ul>
                 <li>
                     - Installer et lancer notre démonstrateur de fournisseur de donnés (nodejs_ES6).
