--- a/NodeJSES6/views/includes/footer.ejs
+++ b/NodeJSES6/views/includes/footer.ejs
@@ -9,6 +9,6 @@
         </p>
     </div>
 </footer>
-<script src="http://fcp.integ01.dev-franceconnect.fr/js/franceconnect.js"></script>
+<script src="https://fcp.integ01.dev-franceconnect.fr/js/franceconnect.js"></script>
 </body>
 </html>
