--- a/NodeJSES6/views/includes/header.ejs
+++ b/NodeJSES6/views/includes/header.ejs
@@ -14,7 +14,7 @@
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-start">
                 <div class="navbar-brand">
-                    <h2 class="title is-2">Démonstrateur Fournisseur de Service</h2>
+                    <h2 class="title is-2"><a href="/">Démonstrateur Fournisseur de Service</a></h2>
                 </div>
             </div>
             <div class="navbar-end">
