more explicit variable name
isAuth can refer to isApplicationAuthenticated and isUserAuthorized as
well. So we make it explicit that it refers to isUserAuthenticated.

--- a/NodeJSES6/views/includes/header.ejs
+++ b/NodeJSES6/views/includes/header.ejs
@@ -19,7 +19,7 @@
             </div>
             <div class="navbar-end">
                 <div class="navbar-item">
-                    <% if (isAuth) {%>
+                    <% if (isUserAuthenticated) {%>
                     <div id="fconnect-profile" data-fc-logout-url="/logout" class="custom_navbar_position">
                         <a href="#" class="has-text-link" >
                             <%= user.family_name %> <%= user.given_name %>
