close html tags in the file their are open

--- a/NodeJSES6/views/pages/index.ejs
+++ b/NodeJSES6/views/pages/index.ejs
@@ -1,3 +1,7 @@
+<!doctype html>
+<html lang="en">
+<% include ../includes/head.ejs %>
+<body>
 <% include ../includes/header.ejs %>
 <section class="custom-content">
     <div class="container has-text-centered">
@@ -8,3 +12,5 @@
     </div>
 </section>
 <% include ../includes/footer.ejs %>
+</body>
+</html>
