--- a/NodeJSES6/views/pages/profile.ejs
+++ b/NodeJSES6/views/pages/profile.ejs
@@ -1,3 +1,7 @@
+<!doctype html>
+<html lang="en">
+<% include ../includes/head.ejs %>
+<body>
 <% include ../includes/header.ejs %>
 <section class="container custom-content">
     <div class="columns">
@@ -79,3 +83,5 @@
     </div>
 </section>
 <% include ../includes/footer.ejs %>
+</body>
+</html>
