display data from OS1 & OS2 only

--- a/NodeJSES6/views/pages/profile.ejs
+++ b/NodeJSES6/views/pages/profile.ejs
@@ -51,31 +51,15 @@
             <tbody>
             <tr class="has-text-grey-dark">
                 <th>Revenu Fiscal de Référence (RFR)</th>
-                <td><%= dgfipData.RFR %></td>
+                <td><%= dgfipData.revenuFiscalDeReference %></td>
             </tr>
             <tr class="has-text-grey-dark">
-                <th>Nombre de personnes à charge</th>
-                <td><%= dgfipData.nombreDePersonnesACharge %></td>
+                <th>Nombre de parts</th>
+                <td><%= dgfipData.nombreDeParts %></td>
             </tr>
             <tr class="has-text-grey-dark">
-                <th>Enfants à charge en garde alternée</th>
-                <td><%= dgfipData.enfantsAChargeEnGardeAlternee %></td>
-            </tr>
-            <tr class="has-text-grey-dark">
-                <th>Personnes Invalides à charge</th>
-                <td><%= dgfipData.personnesInvalidesACharge %></td>
-            </tr>
-            <tr class="has-text-grey-dark">
-                <th>Enfants Majeurs Célibataires</th>
-                <td><%= dgfipData.enfantsMajeursCelibataires %></td>
-            </tr>
-            <tr class="has-text-grey-dark">
-                <th>Enfants Majeurs Maries ou Chargé de famille</th>
-                <td><%= dgfipData.enfantsMajeursMariesOuChargeDeFamille %></td>
-            </tr>
-            <tr class="has-text-grey-dark">
-                <th>NbPacP</th>
-                <td><%= dgfipData.nbPacP %></td>
+                <th>Adresse fiscale de taxation</th>
+                <td><%= dgfipData.adresseFiscaleDeTaxation %></td>
             </tr>
             </tbody>
         </table>
