refacto controllers (remove test for future fix)

--- a/NodeJSES6/views/pages/profile.ejs
+++ b/NodeJSES6/views/pages/profile.ejs
@@ -40,7 +40,7 @@
             <div class="has-text-centered"><a class="button is-link" href="/callFD">Appel à la DGFIP</a></div>
             <% } %>
         </div>
-        <% if (isFdData) { %>
+        <% if (locals.dgfipData) { %>
         <table class="table">
             <thead>
             <tr class="has-text-grey-dark">
