Modify call to fd

--- a/NodeJSES6/views/pages/profile.ejs
+++ b/NodeJSES6/views/pages/profile.ejs
@@ -28,7 +28,7 @@
             <br>
             <div class="has-text-centered">
                 <button class="button is-link"
-                        href="/callFD"
+                        href="/callFd"
                         aria-label="faire un appel au fournisseur de donnés"
                         title="faire un appel au fournisseur de donnés"
                         target="_blank"
@@ -37,7 +37,7 @@
                 </button>
             </div>
             <% } else { %>
-            <div class="has-text-centered"><a class="button is-link" href="/callFD">Appel à la DGFIP</a></div>
+            <div class="has-text-centered"><a class="button is-link" href="/callFd">Appel à la DGFIP</a></div>
             <% } %>
         </div>
         <% if (locals.dgfipData) { %>
