Fix how france connect kit is call

--- a/NodeJSES6/views/includes/footer.ejs
+++ b/NodeJSES6/views/includes/footer.ejs
@@ -10,4 +10,4 @@
     </div>
 </footer>
 <!-- This script brings the FranceConnect tools modal which enable "disconnect", "see connection history" and "see FC FAQ" features -->
-<script src="https://fcp.integ01.dev-franceconnect.fr/js/franceconnect.js"></script>
+<script src="<%= france_connect_kit_url %>"></script>
