--- a/NodeJSES6/views/pages/index.ejs
+++ b/NodeJSES6/views/pages/index.ejs
@@ -11,6 +11,6 @@
         </a>
     </div>
 </section>
-<% include ../includes/footer.ejs %>
+<%- include('../includes/footer.ejs', { france_connect_kit_url: france_connect_kit_url }); %>
 </body>
-</html>
+</html>s
