--- a/NodeJSES6/views/includes/footer.ejs
+++ b/NodeJSES6/views/includes/footer.ejs
@@ -10,4 +10,4 @@
     </div>
 </footer>
 <!-- This script brings the FranceConnect tools modal which enable "disconnect", "see connection history" and "see FC FAQ" features -->
-<script src="<%= france_connect_kit_url %>"></script>
+<script src="<%= franceConnectKitUrl %>"></script>
