local installation now hit fc dev instead of fc integ + fix documentation errors

--- a/NodeJSES6/views/pages/profile.ejs
+++ b/NodeJSES6/views/pages/profile.ejs
@@ -14,15 +14,15 @@
             <p><b>Activer la fonctionalité ci-dessus : </b></p>
             <ul>
                 <li>
-                    - Installer et lancer notre démonstrateur de fournisseur de donnés (nodejs_ES6).
-                    <a href="https://github.com/france-connect/data-providers-examples"
+                    - Installer et lancer
+                    <a href="https://github.com/france-connect/data-providers-examples/tree/master/nodejs_ES6"
                        aria-label="lien vers exemple fournisseur de donnés sur github"
                        title="lien repo github fournisseur de donnés"
                        target="_blank">
-                        lien github
+                        notre démonstrateur de fournisseur de donnés
                     </a>
                 </li>
-                <li>- Passer à "true" la valeur de "USING_FD_MOCK" dans config/config.json.</li>
+                <li>- Passer à "true" la valeur de "USE_FD" dans config/config.json.</li>
                 <li>- Puis cliquer sur le button ci-dessous.</li>
             </ul>
             <br>
