more precise installation documentation

--- a/NodeJSES6/views/pages/profile.ejs
+++ b/NodeJSES6/views/pages/profile.ejs
@@ -19,10 +19,10 @@
                        aria-label="lien vers exemple fournisseur de donnés sur github"
                        title="lien repo github fournisseur de donnés"
                        target="_blank">
-                        notre démonstrateur de fournisseur de donnés
+                        notre démonstrateur de fournisseur de donnés en mode connecté
                     </a>
                 </li>
-                <li>- Passer à "true" la valeur de "USE_FD" dans config/config.json.</li>
+                <li>- Passer à "true" la valeur de "USE_FD" dans config/config.json et redémarrer l'application</li>
                 <li>- Puis cliquer sur le button ci-dessous.</li>
             </ul>
             <br>
