New css and separate auth call from data call

--- a/NodeJSES6/views/pages/index.ejs
+++ b/NodeJSES6/views/pages/index.ejs
@@ -3,9 +3,12 @@
 <% include ../includes/head.ejs %>
 <body>
 <% include ../includes/header.ejs %>
-<section class="custom-content">
+<section class="section is-medium">
     <div class="container has-text-centered">
-        <!-- FC btn -->
+         <!--<h1 class="title">Récupérer vos données via FranceConnect</h1>
+
+        <p>Pour récupérer vos données via <strong>FranceConnect</strong> cliquez sur le bouton ci-dessous</p>
+        &lt;!&ndash; FC btn &ndash;&gt;-->
         <a href="/login">
             <img src="img/FCboutons-10.png" alt="">
         </a>
