--- a/NodeJSES6/views/pages/logged-out.ejs
+++ b/NodeJSES6/views/pages/logged-out.ejs
@@ -3,7 +3,7 @@
 <% include ../includes/head.ejs %>
 <body>
 <% include ../includes/header.ejs %>
-<section class="container custom-content">
+<section class="container section is-medium has-text-centered">
     <h4>Merci de votre visite.</h4>
 </section>
 <% include ../includes/footer.ejs %>
