--- a/NodeJSES6/views/includes/header.ejs
+++ b/NodeJSES6/views/includes/header.ejs
@@ -1,10 +1,5 @@
-<div class="container is-fluid">
+<!--<div class="container is-fluid">-->
     <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-start">
-            <div class="navbar-brand">
-                <h2 class="title is-2"><a href="/">Démonstrateur Fournisseur de Service</a></h2>
-            </div>
-        </div>
         <div class="navbar-end">
             <div class="navbar-item">
                 <% if (isUserAuthenticated) {%>
@@ -17,4 +12,13 @@
             </div>
         </div>
     </nav>
-</div>
+    <section class="hero is-small">
+        <div class="hero-body">
+            <div class="container has-text-centered">
+                <h1 class="title">
+                    Bienvenue sur le démonstrateur de fournisseur de service
+                </h1>
+            </div>
+        </div>
+    </section>
+<!--</div>-->
