Modify if on user info on profil page

--- a/NodeJSES6/views/pages/profile.ejs
+++ b/NodeJSES6/views/pages/profile.ejs
@@ -9,7 +9,7 @@
 <section class="container section is-small">
     <div class="columns">
         <div class="column is-half">
-            <% if (locals.dgfipData) { %>
+            <% if (locals.user) { %>
             <table class="table">
                 <thead>
                 <tr class="has-text-grey-dark">
