Add modification after review

--- a/NodeJSES6/views/pages/profile.ejs
+++ b/NodeJSES6/views/pages/profile.ejs
@@ -4,7 +4,7 @@
 <body>
 <% include ../includes/header.ejs %>
 <div>
-    <p class="subtitle has-text-centered margin">Obtenir des informations de La direction générale des Finances publiques</p>
+    <p class="subtitle has-text-centered margin">Obtenir des informations de La Direction Générale des Finances Publiques</p>
 </div>
 <section class="container section is-small">
     <div class="columns">
@@ -23,7 +23,7 @@
                     <td><%= user.family_name %> <%= user.given_name %></td>
                 </tr>
                 <tr class="has-text-grey-dark">
-                    <th>Date / lieux de naissance</th>
+                    <th>Date / lieu de naissance</th>
                     <td><%= user.birthdate %> / <%= user.birthcountry %></td>
                 </tr>
                 <tr class="has-text-grey-dark">
