Fix text error after review PO

--- a/NodeJSES6/views/pages/profile.ejs
+++ b/NodeJSES6/views/pages/profile.ejs
@@ -31,7 +31,7 @@
                 </table>
             <% } %>
             <ul>
-                <li>Obtenir des informations de La direction générale des Finances publiques (DGFIP)</li>
+                <li>Obtenir des informations de La Direction Générale des Finances Publiques (DGFIP)</li>
             </ul>
             <br>
             <div class="has-text-centered"><a class="button is-link" href="/getData">Appel à la DGFIP</a></div>
