Fix broken style

--- a/NodeJSES6/views/includes/footer.ejs
+++ b/NodeJSES6/views/includes/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer custom-content">
+<footer class="footer">
     <div class="content has-text-centered">
         <p>
             <a href="https://partenaires.franceconnect.gouv.fr/fcp/fournisseur-service"
