--- a/NodeJSES6/views/pages/index.ejs
+++ b/NodeJSES6/views/pages/index.ejs
@@ -3,7 +3,7 @@
 <% include ../includes/head.ejs %>
 <body>
 <% include ../includes/header.ejs %>
-<section class="custom-content">
+<section class="section is-medium">
     <div class="container has-text-centered">
         <!-- FC btn -->
         <a href="/login">
