--- a/NodeJSES6/views/includes/header.ejs
+++ b/NodeJSES6/views/includes/header.ejs
@@ -1,10 +1,5 @@
 <div class="container is-fluid">
     <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-start">
-            <div class="navbar-brand">
-                <h2 class="title is-2"><a href="/">Démonstrateur Fournisseur de Service</a></h2>
-            </div>
-        </div>
         <div class="navbar-end">
             <div class="navbar-item">
                 <% if (isUserAuthenticated) {%>
@@ -17,4 +12,7 @@
             </div>
         </div>
     </nav>
+    <section class="section is-small has-text-centered">
+        <h2 class="title is-2"><a href="/">Démonstrateur Fournisseur de Service</a></h2>
+    </section>
 </div>
