Fix wording after review

--- a/NodeJSES6/views/pages/profile.ejs
+++ b/NodeJSES6/views/pages/profile.ejs
@@ -7,7 +7,7 @@
     <section class="section is-small">
         <div class="has-text-centered">
             <ul>
-                <li>Obtenir des informations de La Direction Générale des Finances Publiques (DGFIP)</li>
+                <li>Obtenir des informations de La Direction générale des Finances publiques (DGFIP)</li>
             </ul>
             <br>
             <div class="has-text-centered"><a class="button is-link" href="/getData">Appel à la DGFIP</a></div>
@@ -30,7 +30,7 @@
                             <td><%= user.family_name %> <%= user.given_name %></td>
                         </tr>
                         <tr class="has-text-grey-dark">
-                            <th>Date / Pay de naissance </th>
+                            <th>Date / Pays de naissance </th>
                             <td><%= user.birthdate %> - <% if (user.birthcountry === '99100') {%> France <% } %></td>
                         </tr>
                         <tr class="has-text-grey-dark">
