[FCA-64] Added in front preferred_username and uid

--- a/serviceProviderNodeJSPassport/views/index.ejs
+++ b/serviceProviderNodeJSPassport/views/index.ejs
@@ -42,7 +42,9 @@
         <ul class="unstyled">
             <li><b>given_name</b>: <%= userInfo.given_name %></li>
             <li><b>family_name</b>: <%= userInfo.family_name %></li>
+            <li><b>preferred_username</b>: <%= userInfo.preferred_username %></li>
             <li><b>birthdate</b>: <%= userInfo.birthdate %></li>
+            <li><b>uid</b>: <%= userInfo.uid %></li>
             <li><b>gender</b>: <%= userInfo.gender %></li>
             <li><b>birthplace</b>: <%= userInfo.birthplace %></li>
             <li><b>birthcountry</b>: <%= userInfo.birthcountry %></li>
