--- a/NodeJSES6/views/pages/dgfip_via_fc.ejs
+++ b/NodeJSES6/views/pages/dgfip_via_fc.ejs
@@ -10,37 +10,13 @@
                 <li>Obtenir des informations de La Direction générale des Finances publiques (DGFIP)</li>
             </ul>
             <br>
-            <div class="has-text-centered"><a class="button is-link" href="/getData">Récupérer mes informations DGFIP</a></div>
+            <% if (!locals.dgfipData) { %>
+                <div class="has-text-centered"><a class="button is-link" href="/getData">Récupérer mes informations DGFIP</a></div>
+            <% }%>
         </div>
     </section>
     <section class="section is-small">
         <div class="columns">
-            <div class="column is-half">
-                <% if (locals.user) { %>
-                    <table class="table">
-                        <thead>
-                        <tr class="has-text-grey-dark">
-                            <th>Vos Informations</th>
-                            <th>Valeurs</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr class="has-text-grey-dark">
-                            <th>Nom / Prénom</th>
-                            <td><%= user.family_name %> <%= user.given_name %></td>
-                        </tr>
-                        <tr class="has-text-grey-dark">
-                            <th>Date / Pays de naissance </th>
-                            <td><%= user.birthdate %> - <% if (user.birthcountry === '99100') {%> France <% } %></td>
-                        </tr>
-                        <tr class="has-text-grey-dark">
-                            <th>Sexe</th>
-                            <td><%= user.gender %></td>
-                        </tr>
-                        </tbody>
-                    </table>
-                <% } %>
-            </div>
             <div class="column is-half">
             <% if (locals.dgfipData) { %>
                 <table class="table">
@@ -66,6 +42,17 @@
                     </tbody>
                 </table>
             <% } %>
+            </div>
+            <div class="column is-half">
+                <pre>
+                    {
+                       RFR: <%= dgfipData.revenuFiscalDeReference %>
+                       nbrPart : <%= dgfipData.nombreDeParts %>
+                        adresse: {
+                    }
+                    }
+                </pre>
+            </div>
         </div>
     </section>
 </section>
