--- a/NodeJSES6/views/pages/index.ejs
+++ b/NodeJSES6/views/pages/index.ejs
@@ -5,10 +5,17 @@
 <% include ../includes/header.ejs %>
 <section class="section is-medium">
     <div class="container has-text-centered">
-        <!-- FC btn -->
-        <a href="/login">
-            <img src="img/FCboutons-10.png" alt="">
-        </a>
+        <div class="columns">
+            <div class="column is-half">
+                <!-- FC btn -->
+                <a href="/login">
+                    <img src="img/FCboutons-10.png" alt="">
+                </a>
+            </div>
+            <div class="column is-half">
+                <a class="button is-link is-medium" href="/getData">Récupérer mes informations DGFIP via FranceConnect</a>
+            </div>
+        </div>
     </div>
 </section>
 <% include ../includes/footer.ejs %>
