Modify Fs behavior

--- a/NodeJSES6/views/pages/dgfip_via_fc.ejs
+++ b/NodeJSES6/views/pages/dgfip_via_fc.ejs
@@ -45,12 +45,7 @@
             </div>
             <div class="column is-half">
                 <pre>
-                    {
-                       RFR: <%= dgfipData.revenuFiscalDeReference %>
-                       nbrPart : <%= dgfipData.nombreDeParts %>
-                        adresse: {
-                    }
-                    }
+        <%- dgfipDataRaw %>
                 </pre>
             </div>
         </div>
